Refactored Javascript code from HTML code

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -19,6 +19,8 @@
             crossorigin="anonymous"></script>
     <!-- geocoding -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <!-- Javascript to render map -->
+    <script th:src="@{/js/renderMap.js}" type="text/javascript"></script>
 </head>
 
 <body>
