--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,34 +10,15 @@
 
     <div id="map" style="width:80%; height:400px; margin-left: auto; margin-right: auto"></div>
     <script>
-      function initMap() {
-          <!--set Map Options -->
-            var options = {
-              center: {lat: 38.6270, lng: -90.1994},
-              zoom: 8
-            };
-
-           <!--New map-->
-		    var map = new google.maps.Map(document.getElementById('map'), options );
-
-		   <!--        Add marker -->
-            var marker = new google.maps.Marker({
-            position : {lat: 38.6270, lng: -90.1994},
-            map : map,
-          });
-
-        <!-- Info window for marker -->
-            var infoWindow = new google.maps.InfoWindow( {content:'<h4> St Louis</h4>'} );
-
-            marker.addListener('click', function(){
-            infoWindow.open(map,marker);
-        });
-    }
-
+        function initMap(){
+            var location = "St Louis";
+            loadMap(location);
+        }
     </script>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7hSUws5hbDKi3JScfBgPEKeGo4EbJb_s&amp;callback=initMap"
             async="async" defer="defer"></script>
+
 
 </body>
 </html>
