--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-    <head th:replace="fragments :: head">
-        <!-- geocoding -->
-        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    </head>
+<head th:replace="fragments :: head"></head>
 
     <body class="container body-content">
         <!--Navigation Bar-->
@@ -109,65 +106,17 @@
             </div>
 
             <div id="map" style="width:40%; height:400px; margin-left: auto; margin-right: auto"></div>
+            <script>
+                function initMap(){
+                    var location = document.getElementById('playgroundName').value;
+                    loadMap(location);
+                }
 
-    <script>
-
-function initMap() {
-
-          <!--set Map Options -->
-            var options = {
-              center: {lat: 38.6270, lng: -90.1994},
-              zoom: 9
-            };
-
-           <!--New map-->
-		    var map = new google.maps.Map(document.getElementById('map'), options );
-
-          <!-- Call getLatLng-->
-            var location = document.getElementById('playgroundName').value;
-
-                axios.get('https://maps.googleapis.com/maps/api/geocode/json',{
-                params:{
-                        address:location,
-                        key:'AIzaSyC7hSUws5hbDKi3JScfBgPEKeGo4EbJb_s'
-                        }
-                })
-                .then(function(response){
-
-                // Geometry
-                var lat = response.data.results[0].geometry.location.lat;
-                //var lng = Math.abs(response.data.results[0].geometry.location.lng);
-                var lng = response.data.results[0].geometry.location.lng;
-                lat = lat.toFixed(4);
-                lng = lng.toFixed(4);
-
-                <!-- Add marker -->
-                var marker = new google.maps.Marker({
-                        position : {lat: parseFloat( lat ), lng: parseFloat( lng)},
-                           map: map
-                });
-
-
-                <!-- Info window for marker -->
-                var info = document.getElementById('playgroundName').value;
-                var infoWindow = new google.maps.InfoWindow( {content:'<h4> ${info}</h4>'} );
-
-                marker.addListener('click', function(){
-                                infoWindow.open(map,marker);
-                });
-
-            });
-
-
-          }
-
-
-    </script>
+            </script>
 
             <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7hSUws5hbDKi3JScfBgPEKeGo4EbJb_s&amp;callback=initMap"
-                    async="async" defer="defer"></script>
-
-
+                    async="async" defer="defer">
+            </script>
         </div>
     </body>
 </html>
