--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -49,35 +49,38 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
                 <li class="nav-item">
                     <a th:href="@{/list}" class="nav-link">Playgrounds</a>
                 </li>
-                <li class="nav-item">
-                    <a th:href="@{/adduser}" class="nav-link">Sign up <span class="sr-only">(current)</span></a>
-                </li>
-
-                <li>
-                    <div sec:authorize="isAuthenticated()">
-                        <a th:href="@{/logout}" class="nav-link">Logout</a>
-                        <font color="#f5f5f5"><p>Welcome <span sec:authentication="principal.user.userName"></span></p></font>
-                        <sec:authentication property="authenticateduser" />
-                    </div>
-                    <div sec:authorize="isAnonymous()">
-                        <a th:href="@{/login}"  class="nav-link">Login</a>
-                        <font color="white"><p>Welcome Visitor</p></font>
-                    </div>
-                </li>
-
-
-
             </ul>
             <!-- Navbar Search form-->
-            <form class="form-inline my-2 my-lg-0" th:object="${searchForm}" th:action="@{/results}" >
+            <form class="form-inline my-2 my-lg-0 mr-2" th:object="${searchForm}" th:action="@{/results}" >
                 <input class="form-control mr-sm-2" type="text" placeholder="Search" th:field="*{name}" />
                 <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
             </form>
+
+            <!-- Login Items -->
+            <ul class="navbar-nav justify-content-end" sec:authorize="isAuthenticated()">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-white"
+                       href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                       aria-haspopup="true" aria-expanded="false"
+                       sec:authentication="principal.user.userName"></a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" th:href="@{/logout}">Logout</a>
+                    </div>
+                </li>
+                <sec:authentication property="authenticateduser" />
+            </ul>
+            <ul class="navbar-nav justify-content-end"  sec:authorize="isAnonymous()">
+                <li class="nav-item">
+                    <a class="nav-link btn btn-success btn-sm active mr-2" th:href="@{/adduser}">Sign up</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link btn btn-info btn-sm active" th:href="@{/login}">Login</a>
+                </li>
+            </ul>
         </div>
     </nav>
 
-
-    <!-- Footer bar -->
+    <!-- Footer Information -->
     <span th:fragment="footer" class="footer text-center text-muted">
         A Playground Finder | 2019
     </span>
