--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -102,7 +102,7 @@
                     </div>
                 </div>
             </div>
-            <!--Row 3-->
+            <!--Row 3 | Description -->
             <div class="row">
                 <div class="col">
                     <div class="card-body">
@@ -111,7 +111,7 @@
                     </div>
                 </div>
             </div>
-            <!--Row 4 -->
+            <!--Row 4 | Map -->
             <div class="row">
                 <div class="card-body">
                     <div id="map"></div>
@@ -134,7 +134,7 @@
                 s.setAttribute('data-timestamp', +new Date());
                 (d.head || d.body).appendChild(s);
             })();
-        </script>
+    </script>
     <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
     <footer th:replace="fragments :: footer"></footer>
