Fixed Spring Security not permitting external files when not logged in. Moved Disqus Javascript to external files.

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -33,7 +33,8 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
     <!-- Navigation Bar-->
     <nav th:fragment="nav-bar" class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <a th:href="@{/}" class="navbar-brand">St. Louis Playground Finder</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02"
+                aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
