--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -119,23 +119,17 @@
                         async="async" defer="defer"></script>
                 </div>
             </div>
+            <!--Row 5 | Disqus Comments-->
+            <div class="row">
+                <div class="card-body">
+                    <div id="disqus_thread"></div>
+                    <!--Disqus Script-->
+                    <script type="text/javascript" th:src="@{/js/disqus.js}"></script>
+                    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                </div>
+            </div>
         </div>
     </div>
-    <div id="disqus_thread"></div>
-    <script>
-            var disqus_config = function () {
-                this.page.url = 'http://localhost:8080/view/[[${playground.id}]]';  // Replace PAGE_URL with your page's canonical URL variable
-                this.page.identifier = '[[${playground.id}]]'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-            };
-
-            (function() { // DON'T EDIT BELOW THIS LINE
-                var d = document, s = d.createElement('script');
-                s.src = 'https://playground-viewer.disqus.com/embed.js';
-                s.setAttribute('data-timestamp', +new Date());
-                (d.head || d.body).appendChild(s);
-            })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
     <footer th:replace="fragments :: footer"></footer>
 </body>
