--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -42,9 +42,6 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
         <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a th:href="@{/}" class="nav-link">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
                     <a th:href="@{/search}" class="nav-link">Search</a>
                 </li>
                 <li class="nav-item">
@@ -54,7 +51,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
             <!-- Navbar Search form-->
             <form class="form-inline my-2 my-lg-0 mr-2" th:object="${searchForm}" th:action="@{/results}" >
                 <input class="form-control mr-sm-2" type="text" placeholder="Search" th:field="*{name}" />
-                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+                <button class="btn btn-secondary my-2 my-sm-0 mr-3" type="submit">Search</button>
             </form>
 
             <!-- Login Items -->
@@ -72,12 +69,13 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
             </ul>
             <ul class="navbar-nav justify-content-end"  sec:authorize="isAnonymous()">
                 <li class="nav-item">
-                    <a class="nav-link btn btn-success btn-sm active mr-2" th:href="@{/adduser}">Sign up</a>
+                    <a class="nav-link btn btn-info btn-sm active mr-2" th:href="@{/login}">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link btn btn-info btn-sm active" th:href="@{/login}">Login</a>
+                    <a class="nav-link btn btn-success btn-sm active" th:href="@{/adduser}">Sign up</a>
                 </li>
             </ul>
+
         </div>
     </nav>
 
