--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,64 +6,39 @@
 
 <head th:replace="fragments :: head"></head>
 
-<body  class="container body-content">
+<body>
 
-<nav th:replace="fragments :: nav-bar"></nav>
+    <div class="container">
+        <nav th:replace="fragments :: nav-bar"></nav>
 
-
-            <div id="navbar" class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}">Logout</a></li>
-                </ul>
+        <div class="card">
+            <div class="card-header text-center">
+                <h1 class="card-title" th:text="${title}">Title</h1>
             </div>
 
-                <h1 th:text="${title}">Default Title</h1>
-
-                <form action="home" th:action="@{/login}" method="post">
-
-                    <div class="form-group">
-                        <label>Email</label>
-                        <input type="email" class="form-control" name="username"
-                               placeholder="Email" />
-                    </div>
-
-                    <div class="form-group">
-                        <label>Password</label>
-                        <input type="password" class="form-control" name="password"
-                               placeholder="Password" />
-                    </div>
-
-                    <div>
-                        <button type="submit"
-                                th:text="#{label.login}">LogIn</button>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-xs-12">
-                            <div th:if="${param.error}"
-                                 class="alert alert-danger alert-dismissable">
-                                <p>
-                                    <i class="icon fa fa-ban"></i> <span
-                                        th:text="#{error.login_failed}">Invalid Email and
-											Password.</span>
-                                </p>
+            <div class="card-body">
+                <div class="card w-25 mx-auto text-center">
+                    <div class="card-body">
+                        <form th:action="@{/login}" method="post">
+                            <div class="form-group">
+                                <input type="email" class="form-control" name="username"
+                                       placeholder="Email" />
                             </div>
-                            <div th:if="${param.logout}"
-                                 class="alert alert-info alert-dismissable">
-                                <p>
-                                    <i class="icon fa fa-info"></i> <span
-                                        th:text="#{info.logout_success}">You have been logged
-											out.</span>
-                                </p>
+                            <div class="form-group">
+                                <input type="password" class="form-control" name="password"
+                                       placeholder="Password" />
                             </div>
+                            <button type="submit" class="btn btn-success mb-3" th:text="#{label.login}">Login</button>
 
-                        </div>
-
+                            <div th:if="${param.error}" class="alert alert-dismissible alert-primary card-text" role="alert">
+                                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                                <strong th:text="#{error.login_failed}">Invalid Email or Password.</strong>
+                            </div>
+                        </form>
                     </div>
-                </form>
+                </div>
             </div>
         </div>
-
     </div>
 
 </body>
