--- a/src/main/resources/templates/user/addUser.html
+++ b/src/main/resources/templates/user/addUser.html
@@ -2,38 +2,52 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
 
-<body class="container body-content">
-<nav th:replace="fragments :: nav-bar"></nav>
-    <h1 th:text="${title}">Default Title</h1>
+<body>
+    <div class="container">
+        <nav th:replace="fragments :: nav-bar"></nav>
 
-<form method="post" th:object="${user}" th:action="@{/adduser}">
-    <div class="form-group">
-        <label th:for="userName">UserName</label>
-        <input class="form-control" th:field="*{userName}"/>
-        <span class="error" th:errors="*{userName}"></span>
+        <div class="card">
+            <div class="card-header text-center">
+                <h1 class="card-title" th:text="${title}">Title</h1>
+            </div>
+
+            <div class="card-body">
+
+                <div class="card w-25 mx-auto text-center">
+                    <div class="card-body">
+
+                        <form method="post" th:object="${user}" th:action="@{/adduser}">
+                            <div class="form-group">
+                                <input class="form-control" th:field="*{email}"
+                                       placeholder="Email" type="email"/>
+                                <span class="error" th:errors="*{email}"></span>
+                            </div>
+
+                            <div class="form-group">
+                                <input class="form-control" th:field="*{userName}"
+                                       placeholder="Username"/>
+                                <span class="error" th:errors="*{userName}"></span>
+                            </div>
+
+                            <div class="form-group">
+                                <input class="form-control" th:field="*{password}"
+                                       placeholder="Password" type="password"/>
+                                <span class="error" th:errors="*{password}"></span>
+                            </div>
+
+                            <div class="form-group">
+                                <input class="form-control" id="verifyPassword-field" name="verify"
+                                       placeholder="Confirm Password" type="password"/>
+                            </div>
+
+                            <button type="submit" class="btn btn-success">Sign-Up</button>
+                        </form>
+
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-
-    <div class="form-group">
-        <label th:for="password">Password</label>
-        <input class="form-control" th:field="*{password}" type="password"/>
-        <span class="error" th:errors="*{password}"></span>
-    </div>
-
-    <div class="form-group">
-        <label for="verifyPassword-field">Verify Password</label>
-        <input class="form-control" id="verifyPassword-field" name="verify" type="password"/>
-    </div>
-
-    <div class="form-group">
-        <label th:for="email">Email</label>
-        <input class="form-control" th:field="*{email}" type="email"/>
-        <span class="error" th:errors="*{email}"></span>
-    </div>
-
-    <input type="submit" value="Add User"/>
-
-</form>
-
 
 </body>
 </html>
