applied fixes for add/remove playground objects and fix for issue with saving users to DB.

--- a/src/main/resources/templates/remove.html
+++ b/src/main/resources/templates/remove.html
@@ -11,7 +11,7 @@
                 <h1 class="card-title" th:text="${title}">Default Title</h1>
             </div>
             <div class="card-body">
-                <form method="post">
+                <form method="post" th:action="@{/remove}">
                     <div class="form-check" th:each="playground : ${playgrounds}">
                         <input class="form-check-input" type="checkbox" name="playgroundIds" th:value="${playground.id}" th:id="${playground.id}"/>
                         <label class="form-check-label" th:for="${playground.id}" th:text="${playground.name}"></label>
