--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -12,7 +12,7 @@
                 <div class="col">
                     <div class="card-header text-center">
                         <h1 id="playgroundName" class="card-title" th:text="${playground.name}">Playground Name</h1>
-                        <h6 class="card-subtitle mb-2 text-muted">Address</h6>
+                        <h6 th:text="${playground.address}" class="card-subtitle mb-2 text-muted">Address</h6>
                         <br> <br>
                         <div class="fb-like" data-href="http://localhost:8080/" data-width="" data-layout="standard" data-action="like"
                              data-size="small" data-show-faces="true" data-share="true"></div>
@@ -69,6 +69,7 @@
                                 </tr>
                             </thead>
                             <tbody>
+
                                 <tr>
                                     <th scope="row">Climbing Wall</th>
                                     <td>
@@ -97,6 +98,21 @@
                                         <span th:unless="${playground.equipment.slides}">No</span>
                                     </td>
                                 </tr>
+                                <tr>
+                                    <th scope="row">Seesaw</th>
+                                    <td>
+                                        <span th:if="${playground.equipment.seesaw}">Yes</span>
+                                        <span th:unless="${playground.equipment.seesaw}">No</span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Structures</th>
+                                    <td>
+                                        <span th:if="${playground.equipment.structures}">Yes</span>
+                                        <span th:unless="${playground.equipment.structures}">No</span>
+                                    </td>
+                                </tr>
+                                <!--add amenities fields-->
                             </tbody>
                         </table>
                     </div>
