Login Sign up improvments

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -71,7 +71,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
             </ul>
             <ul class="navbar-nav justify-content-end"  sec:authorize="isAnonymous()">
                 <li class="nav-item">
-                    <a class="nav-link btn btn-success btn-sm active mr-2" th:href="@{/adduser}">Sign up</a>
+                    <a class="nav-link btn btn-success btn-sm active mr-2" th:href="@{/addUser}">Sign up</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link btn btn-info btn-sm active" th:href="@{/login}">Login</a>
