--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,65 +6,62 @@
 
 <head th:replace="fragments :: head"></head>
 
-<body  class="container body-content">
+<body>
 
-<nav th:replace="fragments :: nav-bar"></nav>
+<div class="container">
+    <nav th:replace="fragments :: nav-bar"></nav>
 
+    <div sec:authorize="isAnonymous()">
 
-            <div id="navbar" class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}">Logout</a></li>
-                </ul>
+        <form action="home" th:action="@{/login}" method="post">
+            <h1 th:text="${title}">Default Title</h1>
+
+            <div class="form-group">
+                <label>Email</label>
+                <input type="email" class="form-control" name="username"
+                       placeholder="Email"/>
             </div>
 
-                <h1 th:text="${title}">Default Title</h1>
+            <div class="form-group">
+                <label>Password</label>
+                <input type="password" class="form-control" name="password"
+                       placeholder="Password"/>
+            </div>
 
-                <form action="home" th:action="@{/login}" method="post">
+            <div>
+                <button type="submit"
+                        th:text="#{label.login}">LogIn
+                </button>
+            </div>
 
-                    <div class="form-group">
-                        <label>Email</label>
-                        <input type="email" class="form-control" name="username"
-                               placeholder="Email" />
-                    </div>
-
-                    <div class="form-group">
-                        <label>Password</label>
-                        <input type="password" class="form-control" name="password"
-                               placeholder="Password" />
-                    </div>
-
-                    <div>
-                        <button type="submit"
-                                th:text="#{label.login}">LogIn</button>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-xs-12">
-                            <div th:if="${param.error}"
-                                 class="alert alert-danger alert-dismissable">
-                                <p>
-                                    <i class="icon fa fa-ban"></i> <span
-                                        th:text="#{error.login_failed}">Invalid Email and
+            <div class="row">
+                <div class="col-xs-12">
+                    <div th:if="${param.error}"
+                         class="alert alert-danger alert-dismissable">
+                        <p>
+                            <i class="icon fa fa-ban"></i> <span
+                                th:text="#{error.login_failed}">Invalid Email and
 											Password.</span>
-                                </p>
-                            </div>
-                            <div th:if="${param.logout}"
-                                 class="alert alert-info alert-dismissable">
-                                <p>
-                                    <i class="icon fa fa-info"></i> <span
-                                        th:text="#{info.logout_success}">You have been logged
-											out.</span>
-                                </p>
-                            </div>
-
-                        </div>
-
+                        </p>
                     </div>
-                </form>
-            </div>
-        </div>
+                    <div th:if="${param.logout}"
+                         class="alert alert-info alert-dismissable">
+                        <p>
+                            <i class="icon fa fa-info"></i> <span
+                                th:text="#{info.logout_success}">You have been logged
+											out.</span>
+                        </p>
+                    </div>
 
+                </div>
+
+            </div>
+        </form>
     </div>
+
+</div>
+
+<footer th:replace="fragments :: footer"></footer>
 
 </body>
 </html>
