Playground list displaying.

--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -65,7 +65,7 @@
                         <table class="table table-sm table-striped" >
                             <thead class="thead-dark text-center">
                                 <tr>
-                                    <th scope="col" colspan="2">Equipment</th>
+                                    <th scope="col" colspan="2">EquipmentM</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -112,8 +112,20 @@
                                         <span th:unless="${playground.equipment.structures}">No</span>
                                     </td>
                                 </tr>
-                                <!--add amenities fields-->
                             </tbody>
+                            <!--add amenities fields-->
+                            <thead>
+                                <tr>
+                                    <th scope="col" colspan="2">Amenities</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th>Roar.</th>
+                                    <td>Ribbit.</td>
+                                </tr>
+                            </tbody>
+
                         </table>
                     </div>
                 </div>
