Playground list displaying.

--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -65,7 +65,7 @@
                         <table class="table table-sm table-striped" >
                             <thead class="thead-dark text-center">
                                 <tr>
-                                    <th scope="col" colspan="2">EquipmentM</th>
+                                    <th scope="col" colspan="2">Equipment</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -113,10 +113,12 @@
                                     </td>
                                 </tr>
                             </tbody>
+                        </table>
+                        <table class="table table-sm table-striped" >
                             <!--add amenities fields-->
-                            <thead>
+                            <thead class="thead-dark text-center">
                                 <tr>
-                                    <th scope="col" colspan="2">Amenities</th>
+                                    <th scope="col" colspan="2" th:text="Amenitiess">Amenitiess</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -125,7 +127,6 @@
                                     <td>Ribbit.</td>
                                 </tr>
                             </tbody>
-
                         </table>
                     </div>
                 </div>
