added SSL property to DB connection to appease warning messages. Slight change to wording of footer message.

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -81,7 +81,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 
     <!-- Footer Information -->
     <span th:fragment="footer" class="footer text-center text-muted">
-        A Playground Finder | 2019
+        STL Playground Finder | 2019
     </span>
 
 </body>
