removed API key

--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -114,7 +114,7 @@
 
             </script>
 
-            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7hSUws5hbDKi3JScfBgPEKeGo4EbJb_s&amp;callback=initMap"
+            <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&amp;callback=initMap"
                     async="async" defer="defer">
             </script>
         </div>
