--- a/src/main/resources/templates/remove.html
+++ b/src/main/resources/templates/remove.html
@@ -11,17 +11,23 @@
                 <h1 class="card-title" th:text="${title}">Default Title</h1>
             </div>
             <div class="card-body">
-                <form method="post" th:action="@{/remove}">
-                    <div class="form-check" th:each="playground : ${playgrounds}">
-                        <input class="form-check-input" type="checkbox" name="playgroundIds" th:value="${playground.id}" th:id="${playground.id}"/>
-                        <label class="form-check-label" th:for="${playground.id}" th:text="${playground.name}"></label>
+                <div class="card w-25 mx-auto">
+                    <div class="card-body">
+                        <form method="post" th:action="@{/remove}">
+                            <div class="form-check" th:each="playground : ${playgrounds}">
+                                <input class="form-check-input" type="checkbox" name="playgroundIds" th:value="${playground.id}" th:id="${playground.id}"/>
+                                <label class="form-check-label" th:for="${playground.id}" th:text="${playground.name}"></label>
+                            </div>
+                            <br />
+                            <center><button type="submit" class="btn btn-danger">Remove Playground(s)</button></center>
+                        </form>
                     </div>
-                    <br />
-                    <button type="submit" class="btn btn-danger">Remove a Playground</button>
-                </form>
+                </div>
             </div>
         </div>
     </div>
+
+    <footer th:replace="fragments :: footer"></footer>
 
 </body>
 </html>
